# nscp-docs

./: .gitignore  CMakeLists.txt  README.md  conf.py  index.rst  license.rst  mkdocs.yml
_static/: nscp.css_t  version_switch.js
_templates/: layout.html
api/: index.rst  nscpipc.rst  plugin.rst
custom_theme/: nav.html
docs/: checks.md  faq.md  getting_started.md  index.md  installing.md  settings.md  theory.md  usage.md
docs/about/: bugs.md  build.md  copyright.md  index.md
docs/api/: index.md  nscpipc.md  plugin.md
docs/howto/: 03x_migration.md  checks.md  counters.md  (+4 more)
faq/: index.rst
howto/: counters.rst  external_scripts.rst  index.rst  run_commands.rst
manual/: about.rst  build.rst  checks.rst  getting_started.rst  index.rst  installing.rst  nscp_checks.rst  nscp_settings.rst  nscp_usage.rst  settings.rst  windows_installer.rst
reference/: CauseCrashes.rst  CheckEventLog.rst  CheckExternalScripts.rst  CheckHelpers.rst  CheckLogFile.rst  CheckMKClient.rst  CheckMKServer.rst  CheckNSCP.rst  CheckSystemUnix.rst  CheckSystem_check_pdh_samples.inc  CheckTaskSched.rst  CheckWMI.rst  CommandClient.rst  GraphiteClient.rst  LUAScript.rst  NRDPClient.rst  NRPEClient.rst  NRPEServer.rst  NSCAClient.rst  NSCAServer.rst  NSCPClient.rst  NSCPServer.rst  PythonScript.rst  SMTPClient.rst  SamplePluginSimple.rst  Scheduler.rst  SimpleCache.rst  SimpleFileWriter.rst  SyslogClient.rst  WEBServer.rst  index.rst
samples/: CheckDisk_check_drivesize_samples.inc  CheckDisk_check_drivesize_samples.md  CheckDisk_check_files_samples.inc  CheckEventLog_samples.md  CheckEventLog_samples.rst  CheckExternalScripts_samples.md  CheckExternalScripts_samples.rst  CheckSystem_check_pdh_samples.inc  CheckSystem_check_service_samples.inc  CheckWMI_check_wmi_samples.inc  CheckWMI_check_wmi_samples.md  index.md  index.rst
whatsnew/: 0.4.0.rst  0.4.1.rst  0.4.2.rst  0.4.3.rst  0.4.4.rst  0.5.0.rst  changelog.rst  index.rst
(+96 files in other folders)
